# workshop

./: README.md
workshop/workshop_control/: CMakeLists.txt
workshop/workshop_description/urdf/: car.xacro  component_snippets.xacro
workshop/workshop_gazebo/: CMakeLists.txt
workshop/workshop_gazebo/launch/: start.launch
workshop/workshop_gazebo/models/carro/: model.config
workshop/workshop_gazebo/worlds/: basic.world
workshop_control/: package.xml
workshop_control/config/: wheel_control.yaml
workshop_control/launch/: wheel_control.launch
workshop_description/: CMakeLists.txt  package.xml
workshop_description/urdf/: car.gazebo  car.xacro
workshop_gazebo/: CMakeLists.txt  package.xml
workshop_gazebo/launch/: start.launch
workshop_gazebo/models/car/: model.sdf
workshop_gazebo/worlds/: basic.world
