<?xml version="1.0"?>
<package>
  <name>workshop_description</name>
  <version>0.0.0</version>
  <description>A workshop description</description>

  <maintainer email="daniel_regner@hotmail.com">Daniel Regner</maintainer>

  <license>BSD</license>


  <author email="daniel_regner@hotmail.com">Daniel Regner</author>
    <author email="diogo.oliveira@labmetro.ufsc.br"> Diogo Oliveira</author>


  <buildtool_depend>catkin</buildtool_depend>

      <build_depend>rospy</build_depend>

    <run_depend>rospy</run_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>
  <export>
  </export>
</package>
