<?xml version="1.0"?>
<package>
    <name>workshop_gazebo</name>
    <version>0.0.0</version>
    <description>A gazebo structure</description>

    <maintainer email="daniel_regner@hotmail.com">Daniel Regner</maintainer>


    <license>BSD</license>

    <author email="daniel_regner@hotmail.com">Daniel Regner</author>
    <author email="diogo.oliveira@labmetro.ufsc.br"> Diogo Oliveira</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>gazebo_plugins</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>gazebo_msgs</build_depend>

    <run_depend>gazebo_plugins</run_depend>
    <run_depend>gazebo_msgs</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>gazebo_ros_control</run_depend>
    <run_depend>xacro</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>roscpp</run_depend>


    <export>
    </export>
</package>
